# rust-email-newsletter-api

./: .dockerignore  .env  Cargo.toml  Dockerfile  README.md  configuration.yaml  mprocs.yaml  railway.toml  sqlx-data.json
.github/workflows/: general.yaml
configuration/: base.yaml  local.yaml  production.yaml
migrations/: 20230309090410_setup.sql  20230309090413_create_subscriptions_table.sql  20230320071237_add_status_to_subscriptions.sql
src/: configuration.rs  domain.rs  email_client.rs  extractors.rs  lib.rs  main.rs  routes.rs  startup.rs  state.rs  telemetry.rs
src/routes/: subscription.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  main.rs  subscriptions.rs
