[package]
name = "newsletter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "newsletter"

[dependencies]
anyhow = "1.0.69"
async-trait = "0.1.66"
axum = { version = "0.6.10", features = ["macros"] }
config = "0.13.3"
hyper = { version = "0.14.25", default-features = false }
reqwest = { version = "0.11.14", default-features = false, features = ["json", "rustls-tls"] }
secrecy = { version = "0.8.0", features = ["serde"] }
serde = { version = "1.0.154", features = ["derive"] }
serde_json = "1.0.94"
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "offline"] }
thiserror = "1.0.39"
tokio = { version = "1.26.0", features = ["full"] }
tower-http = { version = "0.4.0", features = ["trace"] }
tracing = "0.1.37"
tracing-bunyan-formatter = "0.3.6"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
uuid = { version = "1.3.0", features = ["v4"] }
validator = { version = "0.16.0", features = ["derive"] }

[dev-dependencies]
fake = "2.5.0"
k9 = "0.11.6"
once_cell = "1.17.1"
quickcheck = "1.0.3"
quickcheck_macros = "1.0.0"
rand = "0.8.5"
wiremock = "0.5.17"

[profile.dev.package.sqlx-macros]
opt-level = 3
